--- a/Project1024.Server/Project1024.Server.csproj
+++ b/Project1024.Server/Project1024.Server.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -14,6 +14,10 @@
   <ItemGroup>
     <Folder Include="Services\" />
     <Folder Include="Models\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Project1024.Shared\Project1024.Shared.csproj" />
   </ItemGroup>
 
 </Project>
