添加 EF 实体类并创建迁移

--- a/Project1024.Server/appsettings.Development.json
+++ b/Project1024.Server/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "MySql": "Server=localhost;Database=project1024;Uid=root;Pwd=luoxinyang;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
