整合七牛SDK实现下载凭证提供，完成提供视频链接API

--- a/Project1024.Server/appsettings.Development.json
+++ b/Project1024.Server/appsettings.Development.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "MySql": "Server=localhost;Database=project1024;Uid=root;Pwd=luoxinyang;"
   },
+  "Qiniu": {
+    "Domain": "http://s3ec6gz4h.hb-bkt.clouddn.com",
+    "AccessKey": "6X5eR5JSlIUA0wUhrlZF6TPAXM-jle0yMqHtTqzf",
+    "SecretKey": "NDvRABceVUFfA41ypdUcRElknX2QVDfloL3b2JKD"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
