整合identity实现用户身份验证功能，实现基于JWT的注册登录接口

--- a/Project1024.Server/appsettings.Development.json
+++ b/Project1024.Server/appsettings.Development.json
@@ -12,5 +12,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "JwtSettings": {
+    "SecurityKey": "zheshiyigemiyaowdnmd",
+    "ExpiresIn": "00:30:00"
   }
 }
