--- a/Project1024.Server/appsettings.Development.json
+++ b/Project1024.Server/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MySql": "Server=localhost;Database=project1024;Uid=root;Pwd=luoxinyang;"
+    "MySql": "Server=xycpu;Database=project1024;Uid=root;Pwd=luoxinyang;"
   },
   "Qiniu": {
     "Domain": "http://s3ec6gz4h.hb-bkt.clouddn.com",
