更新七牛云配置

--- a/Project1024.Server/appsettings.Development.json
+++ b/Project1024.Server/appsettings.Development.json
@@ -3,9 +3,9 @@
     "MySql": "Server=xycpu;Database=project1024;Uid=root;Pwd=luoxinyang;"
   },
   "Qiniu": {
-    "Domain": "http://s3ec6gz4h.hb-bkt.clouddn.com",
-    "AccessKey": "6X5eR5JSlIUA0wUhrlZF6TPAXM-jle0yMqHtTqzf",
-    "SecretKey": "NDvRABceVUFfA41ypdUcRElknX2QVDfloL3b2JKD"
+    "Domain": "http://s3qx73a2a.hb-bkt.clouddn.com",
+    "AccessKey": "OByffH76mSKoyPku2IdAdZ0mBS9Byvjow8LvsRs1",
+    "SecretKey": "ggKwVSTAgwaeosc-PL48SlarzQuYpoq_FtnI7c-G"
   },
   "Logging": {
     "LogLevel": {
